fix: home logo now doesn't overflow outside of navbar

--- a/src/components/Header/styles/Header.module.scss
+++ b/src/components/Header/styles/Header.module.scss
@@ -11,6 +11,7 @@
     height: 80px;
     background-color: whitesmoke;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 
     img {
       position: relative;
